# EyeQ

./: .gitignore  README.md  example.py  pyproject.toml
src/EyeQ/: __init__.py  main.py  model.py
